--- a/config.yaml
+++ b/config.yaml
@@ -15,25 +15,34 @@ settings:
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
 
 monitors:
-  - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
-    description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
-    method: GET # default=GET
-    expectStatus: 200 # operational status, default=200
-    followRedirect: false # should fetch follow redirects, default=false
-    linkable: false # allows the title to be a link, default=true
-
-  - id: www-cloudflare-com
-    name: www.cloudflare.com
-    description: 'Built for anything connected to the Internet.'
-    url: 'https://www.cloudflare.com'
+  - id: lb-devoplus-com-tr
+    name: Devoplus Load Balancer
+    url: 'https://lb.devoplus.com.tr/'
     method: GET
     expectStatus: 200
-    linkable: true # allows the title to be a link, default=true
+    linkable: false
+    followRedirect: false
 
-  - id: blog-cloudflare-com
-    name: The Cloudflare Blog
-    url: 'https://blog.cloudflare.com/'
+  - id: api-devoplus-com-tr
+    name: Devoplus API
+    url: 'https://api.devoplus.com.tr/'
     method: GET
     expectStatus: 200
+    linkable: false
+    followRedirect: false
+
+  - id: portal-devoplus-com-tr
+    name: Devoplus Portal
+    url: 'https://portal.devoplus.com.tr/'
+    method: GET
+    expectStatus: 200
+    linkable: false
+    followRedirect: false
+
+  - id: sso-devoplus-com-tr
+    name: Devoplus SSO
+    url: 'https://sso.devoplus.com.tr/'
+    method: GET
+    expectStatus: 200
+    linkable: false
+    followRedirect: false
