--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 settings:
   title: 'Devoplus Status Page'
-  url: 'https://status.devoplus.com.tr' # used for Slack messages
+  url: 'https://status.devo.plus' # used for Slack messages
   logo: logo-192x192.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
