--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 settings:
   title: 'System Status'
   url: 'https://status.devo.plus' # used for Slack messages
-  logo: logo-192x192.png # image in ./public/ folder
+  logo: logo.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
   collectResponseTimes: true # collects avg response times from CRON locations
 
