--- a/config.yaml
+++ b/config.yaml
@@ -54,3 +54,11 @@ monitors:
     expectStatus: 200
     linkable: false
     followRedirect: true
+
+  - id: web-site
+    name: Devoplus Web Site
+    url: 'https://www.devoplus.com.tr/'
+    method: GET
+    expectStatus: 200
+    linkable: false
+    followRedirect: false
