--- a/config.yaml
+++ b/config.yaml
@@ -56,7 +56,7 @@ monitors:
     followRedirect: true
 
   - id: web-site
-    name: Devoplus Web Site
+    name: Web Site
     url: 'https://www.devoplus.com.tr/'
     method: GET
     expectStatus: 200
